@@ -3,6 +3,9 @@ from django.test import TestCase
 from geotrek.infrastructure.factories import InfrastructureFactory, SignageFactory
 from geotrek.maintenance.factories import InterventionFactory, ProjectFactory
 from geotrek.core.factories import TopologyFactory, PathAggregationFactory
+from geotrek.land.factories import (SignageManagementEdgeFactory, WorkManagementEdgeFactory,
+                                    CompetenceEdgeFactory, CityEdgeFactory, DistrictEdgeFactory,
+                                    RestrictedAreaEdgeFactory)
 
 
 class ProjectTest(TestCase):
@@ -68,3 +71,58 @@ class ProjectTest(TestCase):
         infra.delete()
 
         self.assertEquals(proj.infrastructures, [])
+
+
+class ProjectLandTest(TestCase):
+    def setUp(self):
+        self.intervention = InterventionFactory.create()
+        self.project = ProjectFactory.create()
+        self.project.interventions.add(self.intervention)
+        self.project.interventions.add(InterventionFactory.create())
+
+        infra = InfrastructureFactory.create()
+        self.intervention.set_infrastructure(infra)
+        self.intervention.save()
+
+        path = infra.paths.get()
+
+        self.signagemgt = SignageManagementEdgeFactory.create(no_path=True)
+        self.signagemgt.add_path(path, start=0.3, end=0.7)
+        self.workmgt = WorkManagementEdgeFactory.create(no_path=True)
+        self.workmgt.add_path(path, start=0.3, end=0.7)
+        self.competencemgt = CompetenceEdgeFactory.create(no_path=True)
+        self.competencemgt.add_path(path, start=0.3, end=0.7)
+
+        self.cityedge = CityEdgeFactory.create(no_path=True)
+        self.cityedge.add_path(path, start=0.3, end=0.7)
+        self.districtedge = DistrictEdgeFactory.create(no_path=True)
+        self.districtedge.add_path(path, start=0.3, end=0.7)
+        self.restricted = RestrictedAreaEdgeFactory.create(no_path=True)
+        self.restricted.add_path(path, start=0.3, end=0.7)
+
+    def test_project_has_signage_management(self):
+        self.assertIn(self.signagemgt, self.intervention.signage_edges)
+        self.assertIn(self.signagemgt, self.project.signage_edges)
+
+    def test_project_has_work_management(self):
+        self.assertIn(self.workmgt, self.intervention.work_edges)
+        self.assertIn(self.workmgt, self.project.work_edges)
+
+    def test_project_has_competence_management(self):
+        self.assertIn(self.competencemgt, self.intervention.competence_edges)
+        self.assertIn(self.competencemgt, self.project.competence_edges)
+
+    def test_project_has_city_management(self):
+        self.assertIn(self.cityedge, self.intervention.city_edges)
+        self.assertIn(self.cityedge, self.project.city_edges)
+        self.assertIn(self.cityedge.city, self.project.cities)
+
+    def test_project_has_district_management(self):
+        self.assertIn(self.districtedge, self.intervention.district_edges)
+        self.assertIn(self.districtedge, self.project.district_edges)
+        self.assertIn(self.districtedge.district, self.project.districts)
+
+    def test_project_has_restricted_management(self):
+        self.assertIn(self.restricted, self.intervention.area_edges)
+        self.assertIn(self.restricted, self.project.area_edges)
+        self.assertIn(self.restricted.restricted_area, self.project.areas)
